Comments of issue-180 & basic reformating of GO annotation & GO cam download pages

--- a/index.html
+++ b/index.html
@@ -320,7 +320,8 @@ layout: default
     margin-left: auto;
     padding-left: 0px;
     padding-right: 0px;
-    width: 98%;">
+	width: 98%;
+	max-width: 1500px;">
 	<div class="row">
 
 		<div class="card col-md-3">
@@ -398,8 +399,8 @@ layout: default
 							<i class="fa fa-clone"></i> &nbsp; Browse GO-CAMs</a>
 					</div>
 					<div>
-						<a href="https://github.com/geneontology/noctua-models" class="card__link" target="blank">
-							<i class="fa fa-github"></i> &nbsp; Repository</a>
+						<a href="/docs/download-go-cams/" class="card__link">
+							<i class="fa fa-download"></i> &nbsp; Download</a>
 					</div>
 				</div>
 			</div>
