--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ layout: default
 								<span id="id_annotations" class="header_stat"></span> annotations<br> 
 								<span id="id_geneproducts" class="header_stat"></span> gene products | 
 								<span id="id_species" class="header_stat"></span> species
-				<span style="text-align: right; margin-left: 5px;">
+<!--				<span style="text-align: right; margin-left: 5px;">
 					(<a href="/stats.html" style="color: cyan;">see statistics</a>)
-				</span>
+				</span>. -->
 			</p>
 
 
@@ -333,7 +333,7 @@ layout: default
 					<h4 class="card__heading"><i class="fa fa-share-alt"></i> Ontology</h4>
 				</div>
 				<p class="card__description">
-					The network of biological classes describing the current best representation of the “universe” of biology. The molecular
+					The network of biological classes describing the current best representation of the “universe” of biology: the molecular
 					functions, cellular locations, and processes gene products may carry out.
 				</p>
 
@@ -413,10 +413,10 @@ layout: default
 		<div class="card col-md-3">
 			<div class="card__container" style="background-color: rgba(135, 174, 180, 0.3);">
 				<div onclick="location.href = '/docs/tools-overview/'" class="card__picture card__picture__dna--green">
-					<h4 class="card__heading"><i class="fa fa-cog"></i> Tool & Guide</h4>
+					<h4 class="card__heading"><i class="fa fa-cog"></i> Tools & Guides</h4>
 				</div>
 				<p class="card__description">
-					Tools to curate, browse, search, visualize and download both the ontology and annotations. Bioinformatic Guides (Notebooks) and simple API access to integrate GO into your research.
+					Tools to curate, browse, search, visualize and download both the ontology and annotations. Includes bioinformatic guides (Notebooks) and simple API access to integrate the GO into your research.
 				</p>
 
 				<div class="card__bottom">
