also redirect stats

--- a/stats.html
+++ b/stats.html
@@ -1,6 +1,11 @@
 --- 
-layout: default 
+layout: default
+permalink: /stats.html
+redirect_from: 
+- /page/current-go-statistics
 ---
+
+
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="js/stats.js"></script>
