adding banner on main page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ layout: default
 </script>
 
 
+
 <div class="header-container jumbotron" style="
 		padding-bottom: 10px;
 		background-image: linear-gradient(to right, rgba(0, 23, 79, 1), rgba(0, 23, 79, 0.8), rgba(0, 23, 79, 0.5)), url(./assets/gene.jpeg);
@@ -22,6 +23,19 @@ layout: default
 		margin-top: -70px !important;
 		box-shadow: rgba(0, 0, 0, 0.15) 0px 1rem 4rem;
 	">
+
+	<div class="banner" style="background-color: red">
+		<span style="display: inline-block;
+		text-align: center;
+		width: 100%; padding-top: 15px;">
+		<i class="fa fa-3x fa-exclamation-triangle" style="display: inline-block;
+		text-align: left;
+		font-size: 25px;"></i> &nbsp;
+		<a href="/covid-19.html" style="color:white; font-size: 14px;">
+			COVID-19 pandemic: click here to get the latest GO data on SARS-CoV-2
+		</a>
+		</span>
+	</div>	
 	<div class="container" style="width: 98%;">
 		<div class="container" style="width: 98%; padding-top: 50px;">
 			<p style="color: #f2be54;
@@ -66,27 +80,6 @@ layout: default
 						molecular biology and genetics experiments in biomedical research.
 					</p>
 
-					<!-- style="text-align: center;"
-				<p class="u-margin-top-medium">
-
-					<a class="btn u-background-gradient-primary btn-lg" href="{{ " /docs/introduction-to-go-resource/
-					 " | prepend: site.baseurl }}" role="button" style="font-size: 18px; margin: 5px">
-						<i class="fa fa-home"></i> Intro to GO</a>
-
-					<a class="btn u-background-gradient-secondary btn-lg" href="http://amigo.geneontology.org/amigo/dd_browse" target="blank"
-					 role="button" style="font-size: 18px; margin: 5px">
-						<i class="fa fa-share-alt"></i> Browse Ontology</a>
-
-					<a class="btn u-background-gradient-tertiary btn-lg" href="http://amigo.geneontology.org/amigo/search/annotation" target="blank"
-					 role="button" style="font-size: 18px; margin: 5px">
-						<i class="fa fa-clone"></i> Browse Annotations</a>
-
-					<a class="btn u-background-gradient-quaternary btn-lg" href="{{ " /docs/downloads/ " | prepend: site.baseurl }}" role="button"
-					 style="font-size: 18px; margin: 5px">
-						<i class="fa fa-download"></i> Downloads</a>
-
-				</p>
-				 -->
 					<br>
 
 					<p>
