--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ layout: default
 					</div>
 					<div>
 						<a href="http://amigo.geneontology.org/amigo/search/annotation" class="card__link" target="blank">
-							<i class="fa fa-clone"></i> &nbsp; View in AmiGO</a>
+							<i class="fa fa-clone"></i> &nbsp; Browse in AmiGO</a>
 					</div>
 					<div>
 						<a href="/docs/download-go-annotations/" class="card__link" target="blank">
