remove mention of "latest" since we are not updating that page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
 		text-align: left;
 		font-size: 25px;"></i> &nbsp;
 		<a href="/covid-19.html" style="color:white; font-size: 14px;">
-			COVID-19 pandemic: click here to get the latest GO data on SARS-CoV-2
+			COVID-19 pandemic: click here to get GO data on SARS-CoV-2
 		</a>
 		</span>
 	</div>	
