--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ layout: default
 								<span id="id_annotations" class="header_stat"></span> annotations<br> 
 								<span id="id_geneproducts" class="header_stat"></span> gene products | 
 								<span id="id_species" class="header_stat"></span> species
-<!--				<span style="text-align: right; margin-left: 5px;">
+				<span style="text-align: right; margin-left: 5px;">
 					(<a href="/stats.html" style="color: cyan;">see statistics</a>)
-				</span>. -->
+				</span>. 
 			</p>
 
 
