Quick fix of the search

--- a/search.html
+++ b/search.html
@@ -1,10 +1,9 @@
 ---
 layout: default
+permalink: /search.html
 ---
 
 <div class="home container">
-
-  <!-- {{ content }} -->
 
   <h1 class="page-heading">Search GO Documentation</h1>
 
