--- a/sparql.html
+++ b/sparql.html
@@ -1,22 +1,19 @@
 <html>
 
 <head>
+
     <title>Gene Ontology SPARQL endpoint</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="shortcut icon" href="http://www.geneontology.org/favicon.ico">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" integrity="sha384-PmY9l28YgO4JwMKbTvgaS7XNZJ30MK9FAZjjzXtlqyZCqBY6X6bXIkM++IkyinN+"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap-theme.min.css" integrity="sha384-jzngWsPS6op3fgRCDTESqrEJwRKck+CILhJVO5VvaAZCq8JYf8HsR/HPpBOOPZfR"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" integrity="sha384-PmY9l28YgO4JwMKbTvgaS7XNZJ30MK9FAZjjzXtlqyZCqBY6X6bXIkM++IkyinN+" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap-theme.min.css" integrity="sha384-jzngWsPS6op3fgRCDTESqrEJwRKck+CILhJVO5VvaAZCq8JYf8HsR/HPpBOOPZfR" crossorigin="anonymous">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap.min.css">
     <link rel="stylesheet" href="https://geneontology-public.s3.amazonaws.com/assets/font-awesome.min.css">
-
-
-
     <link href="https://unpkg.com/@triply/yasgui/build/yasgui.min.css" rel="stylesheet" type="text/css" />
+
     <script src="https://unpkg.com/@triply/yasgui/build/yasgui.min.js"></script>
+    
     <style>
         .yasgui .autocompleteWrapper {
             display: none !important;
@@ -107,18 +104,83 @@
 
     <script>
 
+        // change this endpoint if you plan to use this page for another page
+        let sparqlEndpoint = "http://rdf.geneontology.org/blazegraph/sparql";
 
         // utility function to remove verbosity when creating tabs (SPARQL query)
-        function addTab(yasgui, name, active = true) {
+        // note: can override the endpoint variable for tab-specific sparql endpoint
+        function addTab(yasgui, name, active = true, endpoint = sparqlEndpoint) {
             var tabConfig = { ...Yasgui.Tab.getDefaults(), name: name };
-            tabConfig.requestConfig = { endpoint: "http://rdf.geneontology.org/blazegraph/sparql" };
+            tabConfig.requestConfig = { endpoint: endpoint };
             var newTab = yasgui.addTab(
-            active, // set as active tab
-            tabConfig
+                active, // set as active tab
+                tabConfig
             );
             return newTab            
         }
 
+        // utility function to fetch some data and call a cb function when done
+        function fetchData(URL, cb) {
+            var oReq = new XMLHttpRequest();
+            oReq.onload = cb;
+            oReq.open("GET", URL);
+            oReq.send();            
+        }
+
+        // add an empty query tab, useful for users to start creating query right away
+        function addEmptyQueryTab(yasgui, name = "Your Query") {
+            var tabEmptyQuery = addTab(yasgui, name);
+            tabEmptyQuery.setQuery(`
+            PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
+            PREFIX rdfs:<http://www.w3.org/2000/01/rdf-schema#> 
+            PREFIX dc: <http://purl.org/dc/elements/1.1/>
+            PREFIX owl: <http://www.w3.org/2002/07/owl#>
+            SELECT * WHERE {
+                ?sub ?pred ?val
+            }`);
+            tabEmptyQuery.yasqe.autoformat();
+            yasgui.selectTabId(tabEmptyQuery.persistentJson.id);
+        }
+
+        // add a SPARQL query to the current yasgui instance, from a URL
+        // note 1: there is no check on the validity of the URL nor its content
+        // note 2: if a #+ endpoint: field is provided, will update the endpoint used for that query
+        function addQueryFrom(yasgui, URL, active = true) {
+            fetchData(URL, (response) => {
+                let text = response.target.response;
+
+                // Title strategy 1: by default from the URL
+                let title = response.target.responseURL.split("/");
+                title = title[title.length - 1];
+                if(title.includes("\.")) { title = title.substring(0, title.indexOf(".")); }
+
+                // Title strategy 2: if #+ summary field present
+                if(text.includes("#+ summary: ")) {
+                    title = text.substring(text.indexOf("#+ summary: ") + 12).trim();
+                    title = title.substring(0, title.indexOf("\n")).trim();
+                }
+
+                // endpoint is the general one unless specify in the query itself
+                let endpoint = sparqlEndpoint;
+                if(text.includes("#+ endpoint: ")) {
+                    endpoint = text.substring(text.indexOf("#+ endpoint: ") + 13).trim();
+                    endpoint = endpoint.substring(0, endpoint.indexOf("\n")).trim();
+                }
+
+                // finally create and add the tab to yasgui
+                let query = text;
+                var tab_gocams = addTab(yasgui, title, active, endpoint);
+                tab_gocams.setQuery(query);
+                tab_gocams.yasqe.autoformat();
+            })
+        }
+
+        // same as above, but work with an array of URLs
+        function addQueriesFrom(yasgui, URLs) {
+            for(let URL of URLs) {
+                addQueryFrom(yasgui, URL);
+            }
+        }
 
         // the default queries are hard coded here from the documentation 
         // https://geneontology.org/docs/sparql/
@@ -266,37 +328,34 @@
             yasgui.selectTabId(tab_your_query.persistentJson.id);
         }
 
+
     </script>
 </head>
 
 
 <body>
 
-
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
                 <div class="panel">
 
-                    <!-- Panel including title, breadcrumbs, and controls -->
+                    <!-- Page navigation bar  -->
                     <div class="panel-heading clearfix">
-                        <!-- Title and breadcrumbs -->
+
+                        <!-- Container for logo -->
                         <div class="btn-group pull-left">
-                            <!-- App title -->
                             <div class="pull-left logo" style="margin-top: 10px;">
                                 <a href="http://www.geneontology.org">
                                     <img src="https://geneontology-public.s3.amazonaws.com/assets/go-logo.large.png">
                                 </a>
                             </div>
-
                         </div>
 
-                        <h1>
-                            Gene Ontology SPARQL endpoint
-                        </h1>
+                        <!-- Title -->
+                        <h1>Gene Ontology SPARQL endpoint</h1>
 
-
-                        <!-- SOCIAL LINKS -->
+                        <!-- Social Links -->
                         <div class="navbar-right">
                             <ul class="nav navbar-nav" style="padding-top: 14px;">
                                 <li>
@@ -325,20 +384,27 @@
 
                     </div>
 
+
+
+                    <!-- Page main content -->
                     <div class="panel-body">
 
-                        <br>
-                        The <b>GO SPARQL endpoint</b> is the entry point to query GO data from the GO quad store. This page uses the Yasgui editor and functionalities are further described in <a href="https://triply.cc/docs/yasgui" target=blank>Yasgui documentation</a>.<br>
-                        <br>
-                        Programmatic access are to used the following endpoint: http://rdf.geneontology.org/blazegraph/sparql.<br>
-                        <br>
-                        Click on the tabs below to explore query examples on GO-CAMs or use the "Your Query" tab to start designing your query. If you are new to SPARQL and GO-CAM, please refer to our [ <a href="http://geneontology.org/docs/sparql">GO SPARQL documentation</a> ]
-                        <br><br>
+                        <!-- General welcome / description content -->
+                        <p>
+                            <br>
+                            The <b>GO SPARQL endpoint</b> is the entry point to query GO data from the GO quad store. This page uses the Yasgui editor and functionalities are further described in <a href="https://triply.cc/docs/yasgui" target=blank>Yasgui documentation</a>.<br>
+                            <br>
+                            Programmatic access are to used the following endpoint: http://rdf.geneontology.org/blazegraph/sparql.<br>
+                            <br>
+                            Click on the tabs below to explore query examples on GO-CAMs or use the "Your Query" tab to start designing your query. If you are new to SPARQL and GO-CAM, please refer to our [ <a href="http://geneontology.org/docs/sparql/">GO SPARQL documentation</a> ]
+                            <br><br>
+                        </p>
 
+                        <!-- Actual widget to handle the SPARQL queries -->
                         <div id="yasgui"></div>
                             <script>
                                 const yasgui = new Yasgui(document.getElementById("yasgui"), {
-                                    requestConfig: { endpoint: "http://rdf.geneontology.org/blazegraph/sparql" },
+                                    // requestConfig: { endpoint: sparqlEndpoint },
                                     copyEndpointOnNewTab: false,
                                     autoAddOnInit: false,
                                     persistencyExpire : 1,
@@ -346,9 +412,10 @@
 
                                 addDefaultQueries(yasgui);
 
-                                // window.addEventListener("onunload", e => {
-                                //     yasgui.destroy();
-                                // })
+                                // Following are provided as examples as how to add queries from URLs
+                                // addEmptyQueryTab(yasgui);
+                                // addQueryFrom(yasgui, "https://raw.githubusercontent.com/Knowledge-Graph-Hub/kg-covid-19/master/queries/query-07-drug-to-drug-target.rq")
+                                // addQueriesFrom(yasgui, ["https://raw.githubusercontent.com/Knowledge-Graph-Hub/kg-covid-19/master/queries/query-07-drug-to-drug-target.rq", "https://raw.githubusercontent.com/Knowledge-Graph-Hub/kg-covid-19/master/queries/query-05-sars-cov-2-interactors_druggable_2nd_order.rq"])
                                 
                             </script>
                         </div>
