CSS fix for safari

--- a/sparql.html
+++ b/sparql.html
@@ -19,6 +19,10 @@
             display: none !important;
         }
 
+        .yasr .yasr_header {
+            height: 100px;
+        }
+
         #wrapper {
             padding-left: 0;
         }
