--- a/sparql.html
+++ b/sparql.html
@@ -400,7 +400,7 @@
                             <br>
                             Programmatic access are to used the following endpoint: http://rdf.geneontology.org/blazegraph/sparql.<br>
                             <br>
-                            Click on the tabs below to explore query examples on GO-CAMs or use the "Your Query" tab to start designing your query. If you are new to SPARQL and GO-CAM, please refer to our [ <a href="http://geneontology.org/docs/sparql/">GO SPARQL documentation</a> ]
+                            Click on the tabs below to explore query examples on GO-CAMs or use the "Your Query" tab to start designing your query. If you are new to SPARQL and GO-CAM, please refer to our [ <a href="http://geneontology.org/docs/sparql">GO SPARQL documentation</a> ]
                             <br><br>
                         </p>
 
