--- a/sparql.html
+++ b/sparql.html
@@ -1,3 +1,8 @@
+---
+layout: default-no-nav
+permalink: /sparql.html
+---
+
 <html>
 
 <head>
@@ -87,7 +92,7 @@
         }
 
         .panel-heading {
-            padding: 10px 10px 10px 15px;
+            padding: 0px 10px;
             box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.30);
         }
 
@@ -349,7 +354,7 @@
 
                         <!-- Container for logo -->
                         <div class="btn-group pull-left">
-                            <div class="pull-left logo" style="margin-top: 10px;">
+                            <div class="pull-left logo">
                                 <a href="http://www.geneontology.org">
                                     <img src="https://geneontology-public.s3.amazonaws.com/assets/go-logo.large.png">
                                 </a>
@@ -361,7 +366,7 @@
 
                         <!-- Social Links -->
                         <div class="navbar-right">
-                            <ul class="nav navbar-nav" style="padding-top: 14px;">
+                            <ul class="nav navbar-nav">
                                 <li>
                                     <a href="https://github.com/geneontology" target="blank" style="padding: 8px 3px; font-size: 15px;">
                                         <i class="fa fa-github padding-right" aria-hidden="true"></i>
@@ -396,11 +401,11 @@
                         <!-- General welcome / description content -->
                         <p>
                             <br>
-                            The <b>GO SPARQL endpoint</b> is the entry point to query GO data from the GO quad store. This page uses the Yasgui editor and functionalities are further described in <a href="https://triply.cc/docs/yasgui" target=blank>Yasgui documentation</a>.<br>
+                            The <b>GO SPARQL endpoint</b> is the entry point to query GO data from the GO quad store. This page uses the Yasgui editor and functionalities are further described in [ <a href="https://triply.cc/docs/yasgui" target=blank>Yasgui documentation</a> ]<br>
                             <br>
-                            Programmatic access are to used the following endpoint: http://rdf.geneontology.org/blazegraph/sparql.<br>
+                            Programmatic access are to used the following endpoint: http://rdf.geneontology.org/blazegraph/sparql<br>
                             <br>
-                            Click on the tabs below to explore query examples on GO-CAMs or use the "Your Query" tab to start designing your query. If you are new to SPARQL and GO-CAM, please refer to our [ <a href="http://geneontology.org/docs/sparql/">GO SPARQL documentation</a> ]
+                            Click on the tabs below to explore query examples on GO-CAMs or use the "Your Query" tab to start designing your query. If you are new to SPARQL and GO-CAM, please refer to our [ <a href="http://geneontology.org/docs/sparql" target=blank>GO SPARQL documentation</a> ]
                             <br><br>
                         </p>
 
@@ -408,7 +413,7 @@
                         <div id="yasgui"></div>
                             <script>
                                 const yasgui = new Yasgui(document.getElementById("yasgui"), {
-                                    // requestConfig: { endpoint: sparqlEndpoint },
+                                    requestConfig: { endpoint: sparqlEndpoint },
                                     copyEndpointOnNewTab: false,
                                     autoAddOnInit: false,
                                     persistencyExpire : 1,
