fixing some css

--- a/sparql.html
+++ b/sparql.html
@@ -353,9 +353,9 @@ permalink: /sparql.html
                     <div class="panel-heading clearfix">
 
                         <!-- Container for logo -->
-                        <div class="btn-group pull-left">
+                        <div class="btn-group pull-left" style="transform: translate(0px, 25%);">
                             <div class="pull-left logo">
-                                <a href="http://www.geneontology.org">
+                                <a href="http://www.geneontology.org" class="basic-link">
                                     <img src="https://geneontology-public.s3.amazonaws.com/assets/go-logo.large.png">
                                 </a>
                             </div>
