fix css, update footer 2021

--- a/sparql.html
+++ b/sparql.html
@@ -354,8 +354,8 @@ permalink: /sparql.html
 
                         <!-- Container for logo -->
                         <div class="btn-group pull-left">
-                            <div class="pull-left logo">
-                                <a href="http://www.geneontology.org">
+                            <div class="pull-left logo" style="transform: translate(0px, 25%);">
+                                <a href="http://www.geneontology.org" class="basic-link">
                                     <img src="https://geneontology-public.s3.amazonaws.com/assets/go-logo.large.png">
                                 </a>
                             </div>
