--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ layout: default
 							<i class="fa fa-info"></i> &nbsp; GO-CAM Overview</a>
 					</div>
 					<div>
-						<a href="https://geneontology.cloud/browse" class="card__link">
+						<a href="http://geneontology.org/go-cam" class="card__link">
 							<i class="fa fa-clone"></i> &nbsp; Browse GO-CAMs</a>
 					</div>
 					<div>
