--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@ layout: default
 					<i style="	
 								width: 100%;
 								display: block;
-								font-size: 14px;">Powered by <a href="http://pantherdb.org" style="color: white" target="blank">PANTHER</a></i>
+								font-size: 14px;">Powered by <a href="https://pantherdb.org" style="color: white" target="blank">PANTHER</a></i>
 
-						<form action="http://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST" target="_blank">
+						<form action="https://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST" target="_blank">
 							<input name="correction" value="fdr" type="hidden">
 							<input name="format" value="html" type="hidden">
 							<input name="resource" value="PANTHER" type="hidden">
