fix links/form to amigo to https; for geneontology/go-site#53

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ layout: default
 					<br>
 
 					<p>
-						<form action="http://amigo.geneontology.org/amigo/medial_search" class="" method="GET" name="form-search" target="_blank"
+						<form action="https://amigo.geneontology.org/amigo/medial_search" class="" method="GET" name="form-search" target="_blank"
 						 style="max-width: 810px;">
 							<div class="center-block" style="padding-bottom: 1em;">
 								<div class="input-group">
@@ -328,7 +328,7 @@ layout: default
 							<i class="fa fa-info"></i> &nbsp; GO Ontology Overview</a>
 					</div>
 					<div>
-						<a href="http://amigo.geneontology.org/amigo/dd_browse" class="card__link" target="blank">
+						<a href="https://amigo.geneontology.org/amigo/dd_browse" class="card__link" target="blank">
 							<i class="fa fa-clone"></i> &nbsp; Browse in AmiGO</a>
 					</div>
 					<div>
@@ -355,7 +355,7 @@ layout: default
 							<i class="fa fa-info"></i> &nbsp; GO Annotations Overview</a>
 					</div>
 					<div>
-						<a href="http://amigo.geneontology.org/amigo/search/annotation" class="card__link" target="blank">
+						<a href="https://amigo.geneontology.org/amigo/search/annotation" class="card__link" target="blank">
 							<i class="fa fa-clone"></i> &nbsp; Browse in AmiGO</a>
 					</div>
 					<div>
