--- a/sparql.html
+++ b/sparql.html
@@ -114,7 +114,7 @@ permalink: /sparql.html
     <script>
 
         // change this endpoint if you plan to use this page for another page
-        let sparqlEndpoint = "http://rdf.geneontology.org/blazegraph/sparql";
+        let sparqlEndpoint = "https://rdf.geneontology.org/blazegraph/sparql";
 
         // utility function to remove verbosity when creating tabs (SPARQL query)
         // note: can override the endpoint variable for tab-specific sparql endpoint
@@ -403,7 +403,7 @@ permalink: /sparql.html
                             <br>
                             The <b>GO SPARQL endpoint</b> is the entry point to query GO data from the GO quad store. This page uses the Yasgui editor and functionalities are further described in [ <a href="https://triply.cc/docs/yasgui" target=blank>Yasgui documentation</a> ]<br>
                             <br>
-                            Programmatic access are to used the following endpoint: http://rdf.geneontology.org/blazegraph/sparql<br>
+                            Programmatic access are to used the following endpoint: https://rdf.geneontology.org/blazegraph/sparql<br>
                             <br>
                             Click on the tabs below to explore query examples on GO-CAMs or use the "Your Query" tab to start designing your query. If you are new to SPARQL and GO-CAM, please refer to our [ <a href="https://geneontology.org/docs/sparql" target=blank>GO SPARQL documentation</a> ]
                             <br><br>
