--- a/sparql.html
+++ b/sparql.html
@@ -7,7 +7,7 @@ permalink: /sparql.html
 
 <head>
 
-    <title>Gene Ontology SPARQL endpoint</title>
+    <title>Gene Ontology SPARQL endpoint (deprecated 2024)</title>
 
     <link rel="shortcut icon" href="https://geneontology.org/favicon.ico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" integrity="sha384-PmY9l28YgO4JwMKbTvgaS7XNZJ30MK9FAZjjzXtlqyZCqBY6X6bXIkM++IkyinN+" crossorigin="anonymous">
@@ -400,6 +400,9 @@ permalink: /sparql.html
 
                         <!-- General welcome / description content -->
                         <p>
+                            <br>
+                            <b>Note: As of 2024, GO is deprecating our public SPARQL endpoint, with plans to deprecate all related products in the future.</b> The information on this page is for historical purposes only. Please contact the <a href="https://help.geneontology.org/" target=blank>GO Helpdesk</a> with any questions.
+                            <br>
                             <br>
                             The <b>GO SPARQL endpoint</b> is the entry point to query GO data from the GO quad store. This page uses the Yasgui editor and functionalities are further described in [ <a href="https://triply.cc/docs/yasgui" target=blank>Yasgui documentation</a> ]<br>
                             <br>
