Use Font Awesome v6 class names

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
 		<span style="display: inline-block;
 		text-align: center;
 		width: 100%; padding-top: 15px;">
-		<i class="fa fa-3x fa-exclamation-triangle" style="display: inline-block;
+		<i class="fa-solid fa-3x fa-exclamation-triangle" style="display: inline-block;
 		text-align: left;
 		font-size: 25px;"></i> &nbsp;
 		<a href="/covid-19.html" style="color:white; font-size: 14px;">
@@ -84,7 +84,7 @@ layout: default
 									 type="text">
 									<span class="input-group-btn">
 										<button class="btn btn-primary u-no-transform go-search-bar u-anim-zoom-in" type="submit" style="padding-left: 15px; padding-right: 15px; border-radius:0px 25px 25px 0px; height: 50px; background-color: #22612C; border-color: #22612C;" title="Search for GO terms or Gene Products">
-											<i class="fa fa-search"></i>
+											<i class="fa-solid fa-search"></i>
 										</button>
 									</span>
 								</div>
@@ -102,7 +102,7 @@ layout: default
 
 					<h3 style="display: block; margin-left: auto; margin-right: auto; font-size: 24px; letter-spacing: 0.18rem; margin-top: 0px; margin-bottom: 0px; ">
 						<a href="/docs/go-enrichment-analysis/" style="color:white; font-size: 22px;">GO Enrichment Analysis
-							<i class="fa fa-question-circle"></i>
+							<i class="fa-solid fa-question-circle"></i>
 						</a>
 					</h3>
 					<i style="	
@@ -268,7 +268,7 @@ layout: default
 									</button>
 
 									<button type="submit" class="btn btn-primary u-no-transform u-anim-move-right" style="background-color: #22612C; border-color: #22612C; margin-left: 4px;" title="Launch GO Enrichment Analysis">
-										Launch <i class="fa fa-chevron-right u-line-height-single"></i>
+										Launch <i class="fa-solid fa-chevron-right u-line-height-single"></i>
 									</button>
 								</span>
 							</div>
@@ -288,7 +288,7 @@ layout: default
 				">
 
 					<!-- <h3 style="font-size: 25px;margin-bottom: 0px;">
-						<a href="/docs/downloads/">Current Release: 2018-10-08 <i class="fa fa-question-circle"></i></a>
+						<a href="/docs/downloads/">Current Release: 2018-10-08 <i class="fa-solid fa-question-circle"></i></a>
 					</h3>
 					<li>45 042 GO terms</li>
 					<li>6 278 639 annotations</li>
@@ -315,7 +315,7 @@ layout: default
 		<div class="card col-md-3">
 			<div class="card__container" style="background-color: rgba(135, 174, 180, 0.3);">
 				<div onclick="location.href = '/docs/ontology-documentation/'" class="card__picture card__picture__dna--red">
-					<h4 class="card__heading"><i class="fa fa-share-alt"></i> Ontology</h4>
+					<h4 class="card__heading"><i class="fa-solid fa-share-nodes"></i> Ontology</h4>
 				</div>
 				<p class="card__description">
 					The network of biological classes describing the current best representation of the “universe” of biology: the molecular
@@ -325,15 +325,15 @@ layout: default
 				<div class="card__bottom">
 					<div>
 						<a href="/docs/ontology-documentation/" class="card__link">
-							<i class="fa fa-info"></i> &nbsp; GO Ontology Overview</a>
+							<i class="fa-solid fa-info"></i> &nbsp; GO Ontology Overview</a>
 					</div>
 					<div>
 						<a href="https://amigo.geneontology.org/amigo/dd_browse" class="card__link" target="blank">
-							<i class="fa fa-clone"></i> &nbsp; Browse in AmiGO</a>
+							<i class="fa-regular fa-clone"></i> &nbsp; Browse in AmiGO</a>
 					</div>
 					<div>
 						<a href="/docs/download-ontology/" class="card__link">
-							<i class="fa fa-download"></i> &nbsp; Download</a>
+							<i class="fa-solid fa-download"></i> &nbsp; Download</a>
 					</div>
 				</div>
 			</div>
@@ -342,7 +342,7 @@ layout: default
 		<div class="card col-md-3">
 			<div class="card__container" style="background-color: rgba(135, 174, 180, 0.3);">
 				<div onclick="location.href = '/docs/go-annotations/'" class="card__picture card__picture__standard-annotation">
-					<h4 class="card__heading"><i class="fa fa-edit"></i> Annotation</h4>
+					<h4 class="card__heading"><i class="fa-solid fa-edit"></i> Annotation</h4>
 				</div>
 				<p class="card__description">
 					Statements, based on specific, traceable scientific evidence, asserting that a specific gene product is a real exemplar of
@@ -352,15 +352,15 @@ layout: default
 				<div class="card__bottom">
 					<div>
 						<a href="/docs/go-annotations/" class="card__link">
-							<i class="fa fa-info"></i> &nbsp; GO Annotations Overview</a>
+							<i class="fa-solid fa-info"></i> &nbsp; GO Annotations Overview</a>
 					</div>
 					<div>
 						<a href="https://amigo.geneontology.org/amigo/search/annotation" class="card__link" target="blank">
-							<i class="fa fa-clone"></i> &nbsp; Browse in AmiGO</a>
+							<i class="fa-regular fa-clone"></i> &nbsp; Browse in AmiGO</a>
 					</div>
 					<div>
 						<a href="/docs/download-go-annotations/" class="card__link" target="blank">
-							<i class="fa fa-download"></i> &nbsp; Download</a>
+							<i class="fa-solid fa-download"></i> &nbsp; Download</a>
 					</div>
 				</div>
 			</div>
@@ -371,7 +371,7 @@ layout: default
 		<div class="card col-md-3">
 			<div class="card__container" style="background-color: rgba(135, 174, 180, 0.3);">
 				<div onclick="location.href = '/docs/gocam-overview/'" class="card__picture card__picture__gocam">
-					<h4 class="card__heading"><i class="fa fa-cog"></i> GO-CAM</h4>
+					<h4 class="card__heading"><i class="fa-solid fa-cog"></i> GO-CAM</h4>
 				</div>
 				<p class="card__description">
 						GO Causal Activity Model (GO-CAM) provides a structured framework to link standard GO annotations into a more complete model of a biological system.
@@ -380,15 +380,15 @@ layout: default
 				<div class="card__bottom">
 					<div>
 						<a href="/docs/gocam-overview/" class="card__link">
-							<i class="fa fa-info"></i> &nbsp; GO-CAM Overview</a>
+							<i class="fa-solid fa-info"></i> &nbsp; GO-CAM Overview</a>
 					</div>
 					<div>
 						<a href="http://geneontology.org/go-cam" class="card__link">
-							<i class="fa fa-clone"></i> &nbsp; Browse GO-CAMs</a>
+							<i class="fa-regular fa-clone"></i> &nbsp; Browse GO-CAMs</a>
 					</div>
 					<div>
 						<a href="/docs/download-go-cams/" class="card__link">
-							<i class="fa fa-download"></i> &nbsp; Download</a>
+							<i class="fa-solid fa-download"></i> &nbsp; Download</a>
 					</div>
 				</div>
 			</div>
@@ -398,7 +398,7 @@ layout: default
 		<div class="card col-md-3">
 			<div class="card__container" style="background-color: rgba(135, 174, 180, 0.3);">
 				<div onclick="location.href = '/docs/tools-overview/'" class="card__picture card__picture__dna--green">
-					<h4 class="card__heading"><i class="fa fa-cog"></i> Tools & Guides</h4>
+					<h4 class="card__heading"><i class="fa-solid fa-cog"></i> Tools & Guides</h4>
 				</div>
 				<p class="card__description">
 					Tools to curate, browse, search, visualize and download both the ontology and annotations. Includes bioinformatic guides (Notebooks) and simple API access to integrate the GO into your research.
@@ -407,15 +407,15 @@ layout: default
 				<div class="card__bottom">
 					<div>
 						<a href="/docs/tools-overview/" class="card__link">
-							<i class="fa fa-info"></i> &nbsp; GO Tools Overview</a>
+							<i class="fa-solid fa-info"></i> &nbsp; GO Tools Overview</a>
 					</div>
 					<div>
 						<a href="/docs/tools-guide/" class="card__link">
-							<i class="fa fa-clone"></i> &nbsp; GO APIs Guide</a>
+							<i class="fa-regular fa-clone"></i> &nbsp; GO APIs Guide</a>
 					</div>
 					<div>
 						<a href="https://github.com/geneontology/" class="card__link" target="blank">
-							<i class="fa fa-github"></i> &nbsp; GO GitHub</a>
+							<i class="fa-brands fa-github"></i> &nbsp; GO GitHub</a>
 					</div>
 				</div>
 			</div>
