--- a/ribbon.html
+++ b/ribbon.html
@@ -5,13 +5,6 @@ permalink: /ribbon.html
 
 
 <style>
-    *, *::after, *::before {
-        box-sizing: border-box;
-        font-family: "Lato", sans-serif;
-        font-weight: 400;
-        outline: none;
-    }
-
     .banner {
         background-color: red;
         color: white;
@@ -131,7 +124,7 @@ permalink: /ribbon.html
                         Examples
                     </button>
                     <button type="button" class="btn btn-primary u-no-transform u-anim-move-right" style="background-color: #3F51B5; border-color: black; display: block" onclick="view()" title="View GO Ribbon for above gene set">
-                        View <i class="fa fa-chevron-right u-line-height-single"></i>
+                        View <i class="fa-solid fa-chevron-right u-line-height-single"></i>
                     </button>
                 </div>
             </div>
