--- a/gorefs.html
+++ b/gorefs.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="container">
     <h1>GO REFs</h1>
-    <p>This is a collection of references used by the GO Consortium</p>
+    <p>This is a collection of references used by the GO Consortium. GO References (GO_REFs) are non-PMID references used by the GO Consortium and usually describe the method or project used to generate a specific set of annotations.</p>
 
     {% if jekyll.environment == "development" %}
         {% unless site.data.gorefs %}
